--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.22.0",
+    "bcryptjs": "^2.4.3",
     "pretty-checkbox-react": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react-router-dom": "^5.3.0"
   }
 }
